update user post & delete responses

--- a/project-anemone/app/Http/Controllers/Api/V1/Admin/ProjectsApi.yaml
+++ b/project-anemone/app/Http/Controllers/Api/V1/Admin/ProjectsApi.yaml
@@ -475,6 +475,8 @@ paths:
         required: true
         type: "string"
       responses:
+        204:
+          description: "Updated"
         "400":
           description: "Invalid username supplied"
         "404":
