clean typos, update upload response

--- a/project-anemone/app/Http/Controllers/Api/V1/Admin/ProjectsApi.yaml
+++ b/project-anemone/app/Http/Controllers/Api/V1/Admin/ProjectsApi.yaml
@@ -44,6 +44,8 @@ paths:
         required: false
         description: Description of file contents.
       responses:
+        204:
+          description: "Uploaded"
         "415":
           description: "Unsupported Media Type"
       security:
