--- a/project-anemone/.env
+++ b/project-anemone/.env
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:CYuyMyqqPzETsPPIP/oiwo9dV4q3UsZHZDBM5VCKz6E=
 APP_DEBUG=true
-APP_URL=http://project-anemone.test
+APP_URL=http://localhost:8000
+# DEV_APP_URL=http://project-anemone.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
