--- a/project-anemone/app/Http/Controllers/Api/V1/Admin/ProjectsApi.yaml
+++ b/project-anemone/app/Http/Controllers/Api/V1/Admin/ProjectsApi.yaml
@@ -49,9 +49,7 @@ paths:
         "415":
           description: "Unsupported Media Type"
       security:
-        - docstore_auth:
-          - "write:docs"
-          - "read:docs"
+      - api_key: []
   /document:
     put:
       tags:
@@ -78,16 +76,14 @@ paths:
         "405":
           description: "Validation exception"
       security:
-      - docstore_auth:
-        - "write:docs"
-        - "read:docs"
-  /document/findByStatus:
+      - api_key: []
+  /document/status:
     get:
       tags:
       - "document"
       summary: "Finds Document by status"
       description: "Multiple status values can be provided with comma separated strings"
-      operationId: "findDocsByStatus"
+      operationId: "findDocumentByStatus"
       produces:
       - "application/xml"
       - "application/json"
@@ -114,9 +110,7 @@ paths:
         "400":
           description: "Invalid status value"
       security:
-      - docstore_auth:
-        - "write:docs"
-        - "read:docs"
+      - api_key: []
   /document/{documentId}:
     get:
       tags:
@@ -169,16 +163,14 @@ paths:
         "404":
           description: "Document not found"
       security:
-      - docstore_auth:
-        - "write:docs"
-        - "read:docs"
+      - api_key: []
   /document/createWithList:
     post:
       tags:
-      - "user"
+      - "document"
       summary: "Creates list of document with given input list"
       description: ""
-      operationId: "createDocumentsListInput"
+      operationId: "createDocumentList"
       produces:
       - "application/json"
       parameters:
@@ -202,7 +194,7 @@ paths:
       - "document search"
       summary: "Search for document by query"
       description: "Returns a body of content"
-      operationId: "searchByQuery"
+      operationId: "searchDocumentsByQuery"
       produces:
       - "application/json"
       parameters:
@@ -520,13 +512,6 @@ paths:
           $ref: '#/responses/TooManyRequests'  
 # security 
 securityDefinitions:
-  docstore_auth:
-    type: "oauth2"
-    authorizationUrl: "http://anemone.avalonbloom.com/oauth/dialog"
-    flow: "implicit"
-    scopes:
-      write:docs: "modify docs in your account"
-      read:docs: "read your docs"
   api_key:
     type: "apiKey"
     name: "api_key"
