--- a/project-anemone/composer.json
+++ b/project-anemone/composer.json
@@ -8,9 +8,11 @@
         "php": "^8.0.2",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/fortify": "^1.11",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
