--- a/project-anemone/composer.json
+++ b/project-anemone/composer.json
@@ -9,7 +9,8 @@
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.14"
+        "laravel/sanctum": "^2.14",
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
