--- a/project-anemone/.gitignore
+++ b/project-anemone/.gitignore
@@ -1,6 +1,9 @@
 /node_modules
 /public/hot
-/public/storage
+/public/storage/app
+/public/storage/framework
+/public/storage/logs
+/public/images
 /storage/*.key
 /vendor
 .env
