--- a/project-anemone/docker-compose.yml
+++ b/project-anemone/docker-compose.yml
@@ -23,9 +23,7 @@ services:
             - sail
         depends_on:
             - mysql
-            - redis
-            - meilisearch
-            - selenium
+
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -45,30 +43,6 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
-    redis:
-        image: 'redis:alpine'
-        ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sail-redis:/data'
-        networks:
-            - sail
-        healthcheck:
-            test: ["CMD", "redis-cli", "ping"]
-            retries: 3
-            timeout: 5s
-    meilisearch:
-        image: 'getmeili/meilisearch:latest'
-        ports:
-            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
-        volumes:
-            - 'sail-meilisearch:/data.ms'
-        networks:
-            - sail
-        healthcheck:
-            test: ["CMD", "wget", "--no-verbose", "--spider",  "http://localhost:7700/health"]
-            retries: 3
-            timeout: 5s
     mailhog:
         image: 'mailhog/mailhog:latest'
         ports:
@@ -76,10 +50,13 @@ services:
             - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
         networks:
             - sail
-    selenium:
-        image: 'selenium/standalone-chrome'
-        volumes:
-            - '/dev/shm:/dev/shm'
+    phpmyadmin:
+        image: phpmyadmin
+        restart: always
+        ports:
+            - 8086:80
+        environment:
+            - PMA_HOST=mysql
         networks:
             - sail
 networks:
