--- a/project-anemone/Dockerfile
+++ b/project-anemone/Dockerfile
@@ -4,25 +4,44 @@ RUN compile --target=linux/arm/v7 -o /out/anemonebinary .
 RUN composer install --prefer-dist --no-dev --no-interaction --optimize-autoloader
 
 FROM php:8.1-alpine3.14 as production
-COPY --from=build /out/anemonebinary /bin
-
 ENV APP_ENV=production
 ENV APP_DEBUG=false
 
 RUN docker-php-ext-install bcmath pdo_mysql
+ # Create symlink so programs depending on `php` still function
+RUN ln -s /usr/bin/php8 /usr/bin/php
 
-RUN apt-get update
-RUN apt-get install -y git zip unzip
 
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-# COPY --from=build /app /var/www/html
-# COPY docker/000-default.conf /etc/apache2/sites-available/000-default.conf
-# COPY ./project-anemone/.env /var/www/html/.env
+# Configure nginx
+COPY config/nginx.conf /etc/nginx/nginx.conf
+# Configure supervisord
+COPY config/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-# RUN php artisan config:cache && \
-#     php artisan route:cache && \
-#     chmod 777 -R /var/www/html/storage/ && \
-#     chown -R www-data:www-data /var/wwww/ && \
-#     a2enmod rewrite
+# Setup document root
+RUN mkdir -p /var/www/html
 
-EXPOSE 9000
+# Make sure files/folders needed by the processes are accessable when they run under the anemone user
+RUN chown -R anemone.anemone /var/www/html && \
+  chown -R anemone.anemone /run && \
+  chown -R anemone.anemone /var/lib/nginx && \
+  chown -R anemone.anemone /var/log/nginx
+
+# Switch to use a non-root user from here on
+USER anemone
+
+# Add application
+WORKDIR /var/www/html
+COPY --chown=anemone src/ /var/www/html/
+
+# Let supervisord start nginx & php-fpm
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
+
+# Optimizing Configuration loading
+RUN php artisan config:cache
+# Optimizing Route loading
+RUN php artisan route:cache
+# Optimizing View loading
+RUN php artisan view:cache
+
+# Expose the port nginx is reachable on
+EXPOSE 8080
