AP-65 Temporary fix hardcoding the .env to a volume on EBP Server.

--- a/project-anemone/docker-compose.prod.yml
+++ b/project-anemone/docker-compose.prod.yml
@@ -9,6 +9,8 @@ services:
       - sail
     depends_on:
       - mysql
+    volumes:
+      - '/home/ian/anemone.env:/app/.env'
   scraper:
     image: electricbluefishproductions/anemone-scrapper
     ports:
