This setup works, just remember to change user and password  in Scrapy.py when needed

--- a/project-anemone/docker-compose.yml
+++ b/project-anemone/docker-compose.yml
@@ -32,6 +32,8 @@ services:
             - '${SCRAPER_PORT}:5000'
         networks:
             - sail
+        volumes:
+            - './.env:/app/.env'
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
