added persistent storage.

--- a/project-anemone/docker-compose.prod.yml
+++ b/project-anemone/docker-compose.prod.yml
@@ -10,6 +10,7 @@ services:
     depends_on:
       - mysql
     volumes:
+      - '${FILES}:/app/public/images'
       - '/home/ian/anemone.env:/app/.env'
   scraper:
     image: electricbluefishproductions/anemone-scrapper
